# ersilia-tabpfn-client

./: README.md  pyproject.toml  ruff.toml
data/: output.csv  output.h5  test_input.csv
src/tabpfn_client/: __init__.py  api.py  cli.py  client.py  codec.py  constants.py  errors.py  io.py  logger.py  validate.py
src/tabpfn_client/server/: app.py  run.py
tests/: test_core.py
