[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ersilia-tabpfn-client"
version = "0.1.0"
description = "Remote TabPFN model serving and inference client"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Abel Legese", email="abel@ersilia.io"}
]
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "h5py",
  "msgpack",
  "msgpack-numpy",
  "httpx",
  "loguru",
  "rich",
  "python-dotenv",
]

[project.optional-dependencies]
server = [
  "fastapi",
  "uvicorn[standard]",
  "tabpfn",
  "torch",
]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
tabpfn = "tabpfn_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
